--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -239,31 +239,28 @@
       </div>
 
     </div>
-    <div class="col-12">
-      <div class="grid_row">
-        <div class="row toybox">
-          <div class="col-1"><small>🗓</small></div>
-          <div class="col-2"><small>kludge</small></div>
-          <div class="col-2"><small>12/23</small></div>
-          <div class="col-2"><small>14:00</small></div>
-          <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
-          <div class="col-2"><small>鬼ごっこ</small></div>
-        </div>
+    <div class="grid_row">
+      <div class="row toybox">
+        <div class="col-1"><small>🗓</small></div>
+        <div class="col-2"><small>kludge</small></div>
+        <div class="col-2"><small>2021/12/23</small></div>
+        <div class="col-2"><small>14:00</small></div>
+        <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
       </div>
     </div>
-    <div id="collapseExample02" class="col-12 collapse">
-      <div class="grid_row">
-        <div class="row">
-          <div class="media">
-            <div class="media-body">
-              <h5 class="mt-3">😲：DIY＊メイカーズ</h5>
-              <small>既存としてある製品を代用する事で、本来組み合わせての使用を目的としていないシステム（製品）を３Dプリンターを使用してマッシュアップさせる事で全く違った製品が出来上がる。
-              </small>
-            </div>
+
+    <div id="collapseExample" class="grid_row collapse">
+      <div class="row">
+        <div class="media">
+          <div class="media-body">
+            <h5 class="mt-3">😲：DIY＊メイカーズ</h5>
+            <small>既存としてある製品を代用する事で、本来組み合わせての使用を目的としていないシステム（製品）を３Dプリンターを使用してマッシュアップさせる事で全く違った製品が出来上がる。
+            </small>
           </div>
         </div>
       </div>
     </div>
+
     <!--productNav start-->
     <div id="main">
       <div class="container">
