--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -248,29 +248,29 @@
       </div>
     </div>
     <!--productNav end-->
-
-    <div class="grid_row">
-      <div class="row toybox">
-        <div class="col-1"><small>🗓</small></div>
-        <div class="col-2"><small>kludge</small></div>
-        <div class="col-2"><small>2021/12/23</small></div>
-        <div class="col-2"><small>14:00</small></div>
-        <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
+    <div style="padding-top: 20px;" class="col-md-12">
+      <div class="grid_row">
+        <div class="row toybox">
+          <div class="col-1"><small>🗓</small></div>
+          <div class="col-2"><small>kludge</small></div>
+          <div class="col-2"><small>2021/12/23</small></div>
+          <div class="col-2"><small>14:00</small></div>
+          <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
+        </div>
       </div>
-    </div>
 
-    <div id="collapseExample" class="grid_row collapse">
-      <div class="row">
-        <div class="media">
-          <div class="media-body">
-            <h5 class="mt-3">😲：DIY＊メイカーズ</h5>
-            <small>既存としてある製品を代用する事で、本来組み合わせての使用を目的としていないシステム（製品）を３Dプリンターを使用してマッシュアップさせる事で全く違った製品が出来上がる。
-            </small>
+      <div id="collapseExample" class="grid_row collapse">
+        <div class="row">
+          <div class="media">
+            <div class="media-body">
+              <h5 class="mt-3">😲：DIY＊メイカーズ</h5>
+              <small>既存としてある製品を代用する事で、本来組み合わせての使用を目的としていないシステム（製品）を３Dプリンターを使用してマッシュアップさせる事で全く違った製品が出来上がる。
+              </small>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
