--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -257,8 +257,8 @@
             <div class="col-2"><small>年号</small></div>
             <div class="col-2"><small>月日</small></div>
             <div class="col-2"><small>時間</small></div>
-            <div class="col-2"><small>場所</small></div>
-            <div class="col-2"><small>名目</small></div>
+            <div class="col-2"><small>製品</small></div>
+            <div class="col-2"><small>備考</small></div>
           </div>
         </div>
       </div>
@@ -266,11 +266,11 @@
         <div class="grid_row">
           <div class="row toybox">
             <div class="col-1"><small>🗓</small></div>
-            <div class="col-2"><small>20XX</small></div>
-            <div class="col-2"><small>02/01</small></div>
-            <div class="col-2"><small>00:00</small></div>
+            <div class="col-2"><small>2021</small></div>
+            <div class="col-2"><small>12/23</small></div>
+            <div class="col-2"><small>15:00</small></div>
             <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
-            <div class="col-2"><small>鬼ごっこ</small></div>
+            <div class="col-2"><small>💡</small></div>
           </div>
         </div>
       </div>
@@ -279,11 +279,11 @@
           <div class="row">
             <div class="media">
               <div class="media-body">
-                <iframe class="img-responsive center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13364875.097657569!2d140.24292547353707!3d35.83679808475969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34674e0fd77f192f%3A0xf54275d47c665244!2z5pel5pys!5e0!3m2!1sja!2sus!4v1609322937312!5m2!1sja!2sus" width="1096"> </iframe>
-                <h5 class="mt-3">集合場所：全世界規模</h5>
-                <small>名目：鬼ごっこ</small>
-                <small>ルール：鬼につかまると大変、鬼はGPSで探索可能でプレイヤーはゴースト機能搭載のアプリケーション
-                  開発はむり
+                <!--iframe class="img-responsive center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13364875.097657569!2d140.24292547353707!3d35.83679808475969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34674e0fd77f192f%3A0xf54275d47c665244!2z5pel5pys!5e0!3m2!1sja!2sus!4v1609322937312!5m2!1sja!2sus" width="1096"> </iframe-->
+                <h5 class="mt-3">HOWTOO：マジックインクとペイントマーカー</h5>
+                <small>💡：マッシュアップする方法</small>
+                <small>ペイントマーカーに付属している。インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせて成立させる。
+                  上記写真を参考にDIYとしての役割とメイカーズの役割を楽しんでもらえればと思う。
                 </small>
               </div>
             </div>
