--- a/dauber.html
+++ b/dauber.html
@@ -291,12 +291,14 @@
                 <!--iframe class="img-responsive center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13364875.097657569!2d140.24292547353707!3d35.83679808475969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34674e0fd77f192f%3A0xf54275d47c665244!2z5pel5pys!5e0!3m2!1sja!2sus!4v1609322937312!5m2!1sja!2sus" width="1096"> </iframe-->
                 <h5 class="mt-3">HOWTOO：マジックインクとペイントマーカー</h5>
                 <small>💡：マッシュアップする方法</small>
-                <div class="inner cover">
-                  <h1 class="cover-heading"><font>HOWTOO：マジックインクとペイントマーカー</font></h1>
-                  <p><font>💡：マッシュアップする方法</font></p>
-                  <small>ペイントマーカーに付属している。インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを成立させる。
-                    写真は改めて投稿します。
-                  </small>
+                <div class="col-md-12">
+                  <div class="inner cover">
+                    <h1 class="cover-heading"><font>HOWTOO：マジックインクとペイントマーカー</font></h1>
+                    <p><font>💡：マッシュアップする方法</font></p>
+                    <small>ペイントマーカーに付属している。インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを成立させる。
+                      写真は改めて投稿します。
+                    </small>
+                  </div>
                 </div>
               </div>
             </div>
