--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -240,20 +240,11 @@
 
     </div>
 
-    <!--productNav start-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav_footer" class="col-md-12">
-          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-        </div>
-      </div>
-    </div>
-    <!--productNav end-->
     <!--start box1-->
     <div class="container">
       <div class="col-md-12">
         <div class="grid_row">
-          <div class="row">
+          <div　 style="border-top: 1px solid" class="row">
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>年号</small></div>
             <div class="col-2"><small>月日</small></div>
@@ -359,6 +350,19 @@
       <!--end-->
     </div>
     <!--end-->
+
+
+    <!--productNav start-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav_footer" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
+      </div>
+    </div>
+    <!--productNav end-->
+
+
   </div>
 
 
