--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -239,18 +239,24 @@
       </div>
 
     </div>
-
-    <!--start box3-->
+    <!--productNav start-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav_footer" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
+      </div>
+    </div>
+    <!--productNav end-->
+    <!--start-->
     <div class="container">
       <div class="col-md-12">
         <div class="grid_row">
-          <div　 style="border-top: 1px solid" class="row">
+          <div class="row">
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>年号</small></div>
             <div class="col-2"><small>月日</small></div>
-            <div class="col-2"><small>
-                <!--時間-->
-              </small></div>
+            <div class="col-2"><small>時間</small></div>
             <div class="col-2"><small>製品</small></div>
             <div class="col-2"><small>備考</small></div>
           </div>
@@ -262,16 +268,14 @@
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>2021</small></div>
             <div class="col-2"><small>12/23</small></div>
-            <div class="col-2"><small>
-                <!--15:00-->
-              </small></div>
+            <div class="col-2"><small>15:00</small></div>
             <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
             <div class="col-2"><small>💡</small></div>
           </div>
         </div>
       </div>
       <!--end-->
-      <!--startbox4-->
+      <!--start-->
       <div id="collapseExample02" class="col-md-12 collapse">
         <div class="grid_row">
           <div class="row">
@@ -294,17 +298,9 @@
       </div>
       <!--end-->
     </div>
-    <!--end-->
   </div>
-  <!--productNav start-->
-  <div id="main">
-    <div class="container">
-      <div id="productNav_footer" class="col-md-12">
-        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-      </div>
-    </div>
+  <!--end-->
   </div>
-  <!--productNav end-->
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
