--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -256,26 +256,28 @@
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>年号</small></div>
             <div class="col-2"><small>月日</small></div>
-            <div class="col-2"><small>時間</small></div>
+            <!--div class="col-2"><small>時間</small></div-->
             <div class="col-2"><small>製品</small></div>
             <div class="col-2"><small>備考</small></div>
           </div>
         </div>
       </div>
+      <!--timeloop start-->
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row toybox">
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>2021</small></div>
             <div class="col-2"><small>12/23</small></div>
-            <div class="col-2"><small>15:00</small></div>
+            <!--div class="col-2"><small>15:00</small></div-->
             <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
             <div class="col-2"><small>💡</small></div>
           </div>
         </div>
       </div>
-      <!--end-->
-      <!--start-->
+      <!--timeloop end-->
+
+      <!--collapse start-->
       <div id="collapseExample02" class="col-md-12 collapse">
         <div class="grid_row">
           <div class="row">
@@ -296,7 +298,43 @@
           </div>
         </div>
       </div>
-      <!--end-->
+      <!--collapse end-->
+      <!--timeloop start-->
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row toybox">
+            <div class="col-1"><small>🗓</small></div>
+            <div class="col-2"><small>2021</small></div>
+            <div class="col-2"><small>12/23</small></div>
+            <!--div class="col-2"><small>15:00</small></div-->
+            <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample03" role="button" aria-expanded="false" aria-controls="collapseExample03">詳細</a></small></div>
+            <div class="col-2"><small>💡</small></div>
+          </div>
+        </div>
+      </div>
+      <!--timeloop end-->
+      <!--collapse start-->
+      <div id="collapseExample03" class="col-md-12 collapse">
+        <div class="grid_row">
+          <div class="row">
+            <div class="media">
+              <div class="media-body">
+                <div class="col-md-12">
+                  <div class="inner cover">
+                    <h1 class="cover-heading"><font>マジックインク補充液とペイントマーカー</font></h1>
+                    <p><font>💡：マッシュアップする方法</font></p>
+                    <small>ペイントマーカーに付属している。
+                      インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを成立させる。
+                      写真は改めて投稿します。
+                    </small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--collapse end-->
     </div>
   </div>
   <!--end-->
