--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -191,57 +191,52 @@
         <!--text-->
 
         <!--collapse start-->
-        <div id="collapseExample02" style="padding-top: 20px;" class="col-md-12 collapse">
 
-          <!--carousel-start-->
-          <div class="col-md-6">
+        <div class="col-md-6">
 
-            <!--carousel-custom-->
+          <!--carousel-custom-->
 
-            <div id="carousel-custom_001" class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                  <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
-                </div>
-                <div class="item">
-                  <img src="https://i.pinimg.com/originals/ad/28/5b/ad285bb04cefd3a62a90ebced869af30.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
-                </div>
-                <div class="item">
-                  <img src="https://i.pinimg.com/originals/41/bc/1c/41bc1cf8bb9bed42a0271fba3b99ee8d.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
-                </div>
+          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
-
-              <!-- Controls -->
-              <!---->
-              <a class="left carousel-control" href="#carousel-custom_001" role="button" data-slide="prev">
-                <!--<span class="fas fa-arrow-left"></span>-->
-              </a>
-              <a class="right carousel-control" href="#carousel-custom_001" role="button" data-slide="next">
-                <!--<span class="fas fa-arrow-right"></span>-->
-              </a>
-              <!---->
-
-
-              <!-- Indicators start-->
-              <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
-                                  <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                                    <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                                  </li>
-                                  <li data-target="#carousel-custom" data-slide-to="1">
-                                    <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                                  </li>
-                                  <li data-target="#carousel-custom" data-slide-to="2">
-                                    <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                                  </li>
-                                </ol>-->
-              <!--Indicators end-->
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
             </div>
 
-            <!--carousel-custom-->
-          </div>
-          <!--carousel-end-->
+            <!-- Controls -->
+            <!---->
+            <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+              <!--<span class="fas fa-arrow-left"></span>-->
+            </a>
+            <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
+              <!--<span class="fas fa-arrow-right"></span>-->
+            </a>
+            <!---->
 
+
+            <!-- Indicators start-->
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+                    <li data-target="#carousel-custom" data-slide-to="0" class="active">
+                      <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                    </li>
+                    <li data-target="#carousel-custom" data-slide-to="1">
+                      <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                    </li>
+                    <li data-target="#carousel-custom" data-slide-to="2">
+                      <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                    </li>
+                  </ol>-->
+            <!--Indicators end-->
+          </div>
+
+          <!--carousel-custom-->
         </div>
         <!--collapse end-->
 
